--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, shrink-to-fit=no">
-    <link rel="stylesheet" href="./src/output.css">
-    <link rel="icon" type="icon" href="./assets/photos/Harwil-logo.png">
+    <link rel="stylesheet" href="./output.css">
+    <link rel="icon" type="icon" href="./Harwil-logo.png">
 
     <script src="https://kit.fontawesome.com/428684f03b.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
@@ -28,7 +28,7 @@
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7" />
             </svg>
           </button>
-          <img src="assets/photos/Harwil-logo.png" class=" py-4 pl-5 pt-4 cursor-pointer" onclick="window.location.reload()">
+          <img src="Harwil-logo.png" class=" py-4 pl-5 pt-4 cursor-pointer" onclick="window.location.reload()">
           <ul class="space-y-2 p-4 py-6 md:w-full max-md:top-5 max-md:text-3xl">
             <li><a href="#" class="block py-2 px-4 rounded hover:bg-gray-700">O nás</a></li>
             <li><a href="#" class="block py-2 px-4 rounded hover:bg-gray-700">Služby</a></li>
@@ -60,7 +60,7 @@
             </svg>
           </button>
         </div>
-        <img src="./assets/photos/harwil_230x230.jpg" class=" w-32 fixed justify-center left-10 overflow-hidden -z-50 max-md:left-0 cursor-pointer" onclick="window.location.reload()">
+        <img src="./harwil_230x230.jpg" class=" w-32 fixed justify-center left-10 overflow-hidden -z-50 max-md:left-0 cursor-pointer" onclick="window.location.reload()">
         <h1 class=" text-6xl top-9 justify-center left-1/4 pl-60 absolute max-md:left-38 max-md:pl-7 max-md:text-5xl -z-50">HARWIL</h1>
       </div>
     </div>
