--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
 
         <!-- Footer Section -->
- <footer class="bg-gray-800 text-gray-300 py-10">
+ <footer class="bg-gray-800 text-gray-300">
     <div class="container mx-auto px-6 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
       <!-- Services Column -->
       <div>
