--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, shrink-to-fit=no">
-    <link rel="stylesheet" href="./src/output.css">
-    <link rel="icon" type="icon" href="./assets/photos/Harwil-logo.png">
-    <script src="./components/fixedNavbar.js"></script>
-    <script src="./components/carousel.js"></script>
+    <link rel="stylesheet" href="output.css">
+    <link rel="icon" type="icon" href="Harwil-logo.png">
+    <script src="fixedNavbar.js"></script>
+    <script src="carousel.js"></script>
 
     <script src="https://kit.fontawesome.com/428684f03b.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
@@ -72,7 +72,7 @@
             </svg>
           </button>
         </div>
-        <img src="./assets/photos/harwil_230x230.jpg" class=" w-32 relative justify-center left-10 overflow-hidden -z-50 max-md:left-0 cursor-pointer" onclick="window.location.reload()">
+        <img src="harwil_230x230.jpg" class=" w-32 relative justify-center left-10 overflow-hidden -z-50 max-md:left-0 cursor-pointer" onclick="window.location.reload()">
         <h1 class=" text-6xl top-9 justify-center left-1/4 pl-60 absolute max-md:left-38 max-md:pl-7 max-md:text-5xl -z-50">HARWIL</h1>
       </div>
 
