--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
             </svg>
           </button>
         </div>
-        <img src="harwil_230x230.jpg" class=" w-32 relative justify-center left-10 overflow-hidden -z-50 max-md:left-0 cursor-pointer" onclick="window.location.reload()">
-        <h1 class=" text-6xl top-9 justify-center left-1/4 pl-60 absolute max-md:left-38 max-md:pl-7 max-md:text-5xl -z-50">HARWIL</h1>
+        <img src="harwil_230x230.jpg" class=" w-32 relative justify-center left-10 overflow-hidden max-md:left-0 cursor-pointer" onclick="window.location.reload()">
+        <h1 class=" text-6xl top-9 justify-center left-1/4 pl-60 absolute max-md:left-38 max-md:pl-7 max-md:text-5xl">HARWIL</h1>
       </div>
-
+<!--deleted z-index in h1 and img-->
       <!--About-->
       <div class="bg-white py-24 sm:py-32">
         <div class="mx-auto max-w-7xl px-6 lg:px-8 text-center">
