--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         </div>
 
               <!--Carousel-->
-              <div class="relative w-full  mx-auto overflow-hidden">
+              <div class="relative w-full  mx-auto min-h-full overflow-hidden">
                 <!-- Carousel Wrapper -->
                 <div class="flex transition-transform duration-700" id="carousel">
                   <!-- Slide 1 -->
