--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, shrink-to-fit=no">
     <link rel="stylesheet" href="output.css">
     <link rel="icon" type="icon" href="Harwil-logo.png">
+ <script src="https://cdn.tailwindcss.com"></script
     <script src="fixedNavbar.js"></script>
     <script src="carousel.js"></script>
 
